# Arx

./: README.md
app/: privacy.txt
app/jni/src/: Android.mk  CMakeLists.txt  background.c  background.h  common.h  databaseManager.c  databaseManager.h  defs.h  draw.c  draw.h  drops.c  drops.h  highscores.c  highscores.h  init.c  init.h  input.c  input.h  main.c  main.h  menu.c  menu.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  util.c  util.h  volume.c  volume.h
app/src/com/rontekhne/arx/: Arx.java
app/src/main/: AndroidManifest.xml
app/src/main/com/rontekhne/arx/: Arx.java
app/src/main/java/org/libsdl/app/: DatabaseManager.java  DatabaseUsers.java  SDLActivity.java
app/src/main/res/values/: strings.xml
